# unalz

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: archive.rs  crypto.rs  dostime.rs  encoding.rs  error.rs  extract.rs  lib.rs  main.rs  multivolume.rs
src/decompress/: bzip2.rs  deflate.rs  mod.rs  raw.rs
tests/: bzip2_multiblock.rs  data.rs  integration.rs
tests/data/: README.md  low.alz  normal.alz  split.a00  split.a01  split.a02  split.a03  split.a04  split.a05  split.a06  split.alz  store.alz  zip20.alz
